--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loan</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
-</body>
+
+<bod>
+    <form action="">
+        <div>Welcome to our coding with Mr.Coffee</div>
+        
+    </form>
+
+    <script src="./app.js"></script>
+</bod>
+
 </html>
