--- a/index.html
+++ b/index.html
@@ -4,17 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loan</title>
+    <title>Loan Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <div class="calculator">
+        <h1>Loan</h1>
+        <form id="loan-form">
+            <div class="form-group">
+                <label for="amount">Loan Amount:</label>
+                <input type="number" id="amount" placeholder="Enter loan amount" required>
+            </div>
+            <div class="form-group">
+                <label for="interest">Interest Rate (%):</label>
+                <input type="number" id="interest" placeholder="Enter interest rate" required>
+            </div>
+            <div class="form-group">
+                <label for="years">Years to Repay:</label>
+                <input type="number" id="years" placeholder="Enter years to repay" required >
+            </div>
+            <button type="button" onclick="calculateLoan()">Calculate</button>
+        </form>
+        <hr>
+        <div id="results">
+            <h2>Results</h2>
+            <div>Monthly Payment: <span id="monthly-payment"></span></div>
+            <div>Total Payment: <span id="total-payment"></span></div>
+            <div>Total Interest: <span id="total-interest"></span></div>
+        </div>
+    </div>
 
-<bod>
-    <form action="">
-        <div>Welcome to our coding with Mr.Coffee</div>
-        
-    </form>
-
-    <script src="./app.js"></script>
-</bod>
+    <script src="app.js"></script>
+</body>
 
 </html>
