--- a/index.html
+++ b/index.html
@@ -7,30 +7,48 @@
     <title>Loan Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="calculator">
-        <h1>Loan</h1>
+        <h1>Loan Calculator</h1>
         <form id="loan-form">
             <div class="form-group">
                 <label for="amount">Loan Amount:</label>
-                <input type="number" id="amount" placeholder="Enter loan amount" required>
+                <input type="number" id="amount" placeholder="Enter loan amount">
             </div>
             <div class="form-group">
                 <label for="interest">Interest Rate (%):</label>
-                <input type="number" id="interest" placeholder="Enter interest rate" required>
+                <input type="number" id="interest" placeholder="Enter interest rate">
             </div>
             <div class="form-group">
                 <label for="years">Years to Repay:</label>
-                <input type="number" id="years" placeholder="Enter years to repay" required >
+                <input type="number" id="years" placeholder="Enter years to repay">
             </div>
             <button type="button" onclick="calculateLoan()">Calculate</button>
+            <button type="button" onclick="clearForm()">Clear</button>
+            <button type="button" onclick="printResults()">Print</button>
         </form>
-        <hr>
-        <div id="results">
+
+        <div id="results" style="display: none;">
             <h2>Results</h2>
             <div>Monthly Payment: <span id="monthly-payment"></span></div>
             <div>Total Payment: <span id="total-payment"></span></div>
             <div>Total Interest: <span id="total-interest"></span></div>
+
+            <h3>Payment Schedule</h3>
+            <table id="payment-schedule">
+                <thead>
+                    <tr>
+                        <th>Month</th>
+                        <th>Principal Paid</th>
+                        <th>Interest Paid</th>
+                        <th>Balance</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Payment schedule will be dynamically added here -->
+                </tbody>
+            </table>
         </div>
     </div>
 
