--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Loan Calculator</h1>
         <form id="loan-form">
             <div class="form-group">
-                <label for="amount">Loan Amount:</label>
+                <label for="amount">Loan Amount($):</label>
                 <input type="number" id="amount" placeholder="Enter loan amount">
             </div>
             <div class="form-group">
@@ -24,9 +24,29 @@
                 <label for="years">Years to Repay:</label>
                 <input type="number" id="years" placeholder="Enter years to repay">
             </div>
-            <button type="button" onclick="calculateLoan()">Calculate</button>
-            <button type="button" onclick="clearForm()">Clear</button>
-            <button type="button" onclick="printResults()">Print</button>
+            <label for="paymentMethod">Payment Method?:</label>
+            <select class="dropdown">
+                <option value="1" hidden>---Please Select Your Period---</option>
+                <option value="2">Start-of-Period</option>
+                <option value="3">End-of-Period</option>
+            </select>
+            <hr>
+            <div class="showresult">
+                <label for="" id="label">Monthly Payment($)</label>
+                <input type="text" id="label">
+                <label for="">Total Interest($)</label>
+                <input type="text" id="label">
+                <label for="">Total Principal & Interest($)</label>
+                <input type="text" id="label">
+            </div>
+            <hr><br>
+            <div class="class-button">
+                <button type="button" onclick="calculateLoan()">Calculator</button>
+                <button type="button" onclick="clearForm()">Clear</button>
+                <button type="button" onclick="print">Print</button>
+                <button id="payments" type="button" onclick="printResults()">Payment Schedule</button>
+                <button type="button" onclick="">Help</button>
+            </div>
         </form>
 
         <div id="results" style="display: none;">
@@ -45,13 +65,9 @@
                         <th>Balance</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <!-- Payment schedule will be dynamically added here -->
-                </tbody>
             </table>
         </div>
     </div>
-
     <script src="app.js"></script>
 </body>
 
