--- a/index.html
+++ b/index.html
@@ -1,74 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Loan Calculator</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="container">
+            <h1>Loan Calculator</h1>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loan Calculator</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+            <div class="input-section">
+                <label for="loanAmount">Loan Amount:</label>
+                <input type="number" id="loanAmount"
+                    placeholder="Enter loan amount">
 
-<body>
-    <div class="calculator">
-        <h1>Loan Calculator</h1>
-        <form id="loan-form">
-            <div class="form-group">
-                <label for="amount">Loan Amount($):</label>
-                <input type="number" id="amount" placeholder="Enter loan amount">
-            </div>
-            <div class="form-group">
-                <label for="interest">Interest Rate (%):</label>
-                <input type="number" id="interest" placeholder="Enter interest rate">
-            </div>
-            <div class="form-group">
-                <label for="years">Years to Repay:</label>
-                <input type="number" id="years" placeholder="Enter years to repay">
-            </div>
-            <label for="paymentMethod">Payment Method?:</label>
-            <select class="dropdown">
-                <option value="1" hidden>---Please Select Your Period---</option>
-                <option value="2">Start-of-Period</option>
-                <option value="3">End-of-Period</option>
-            </select>
-            <hr>
-            <div class="showresult">
-                <label for="" id="label">Monthly Payment($)</label>
-                <input type="text" id="label">
-                <label for="">Total Interest($)</label>
-                <input type="text" id="label">
-                <label for="">Total Principal & Interest($)</label>
-                <input type="text" id="label">
-            </div>
-            <hr><br>
-            <div class="class-button">
-                <button type="button" onclick="calculateLoan()">Calculator</button>
-                <button type="button" onclick="clearForm()">Clear</button>
-                <button type="button" onclick="print">Print</button>
-                <button id="payments" type="button" onclick="printResults()">Payment Schedule</button>
-                <button type="button" onclick="">Help</button>
-            </div>
-        </form>
+                <label for="interestRate">Annual Interest Rate (%):</label>
+                <input type="number" id="interestRate"
+                    placeholder="Enter interest rate">
 
-        <div id="results" style="display: none;">
-            <h2>Results</h2>
-            <div>Monthly Payment: <span id="monthly-payment"></span></div>
-            <div>Total Payment: <span id="total-payment"></span></div>
-            <div>Total Interest: <span id="total-interest"></span></div>
+                <label for="loanTerm">Loan Term (Years):</label>
+                <input type="number" id="loanTerm"
+                    placeholder="Enter loan term"><br>
+                <button onclick="calculateLoan()">Cal</button>
+                <button type="submit" onclick>Print</button>
+                <button type="reset" onclick="clearCalculator()">Clare</button>
+                <button onclick="printSchedule()">Print Schedule</button>
+            </div>
+            <div class="result-section" id="resultSection">
+                <h2>Payment Schedule</h2>
+                <table id="paymentSchedule">
+                    <thead>
+                        <tr>
+                            <th>Month</th>
+                            <th>Payment</th>
+                            <th>Principal</th>
+                            <th>Interest</th>
+                            <th>Balance</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
 
-            <h3>Payment Schedule</h3>
-            <table id="payment-schedule">
-                <thead>
-                    <tr>
-                        <th>Month</th>
-                        <th>Principal Paid</th>
-                        <th>Interest Paid</th>
-                        <th>Balance</th>
-                    </tr>
-                </thead>
-            </table>
+            </div>
+
         </div>
-    </div>
-    <script src="app.js"></script>
-</body>
+
+        <script src="./app.js"></script>
+    </body>
 
 </html>
